--- a/estilo.css
+++ b/estilo.css
@@ -85,3 +85,15 @@ input[type='submit']{
       min-width: 170px;
     }
   }
+
+  h1.En{
+    color:rgb(0, 0, 0);
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif
+    }
+    
+    h2.En2{
+    color:rgba(41, 41, 41, 0.581);
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif
+    }
