--- a/estilo.css
+++ b/estilo.css
@@ -100,45 +100,39 @@ input[type='submit']{
 /*
 Css tabla
 */ 
-    table.cinereousTable {
-        border: 6px solid #948473;
-        background-color: #FFE3C6;
-        width: 100%;
-        text-align: center;
-      }
-      table.cinereousTable td, table.cinereousTable th {
-        border: 1px solid #948473;
-        padding: 4px 4px;
-      }
-      table.cinereousTable tbody td {
-        font-size: 13px;
-      }
-      table.cinereousTable thead {
-        background: #948473;
-        background: -moz-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
-        background: -webkit-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
-        background: linear-gradient(to bottom, #afa396 0%, #9e9081 66%, #948473 100%);
-      }
-      table.cinereousTable thead th {
-        font-size: 17px;
-        font-weight: bold;
-        color: #F0F0F0;
-        text-align: left;
-        border-left: 2px solid #948473;
-      }
-      table.cinereousTable thead th:first-child {
-        border-left: none;
-      }
-      
-      table.cinereousTable tfoot {
-        font-size: 16px;
-        font-weight: bold;
-        color: #F0F0F0;
-        background: #948473;
-        background: -moz-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
-        background: -webkit-linear-gradient(top, #afa396 0%, #9e9081 66%, #948473 100%);
-        background: linear-gradient(to bottom, #afa396 0%, #9e9081 66%, #948473 100%);
-      }
-      table.cinereousTable tfoot td {
-        font-size: 16px;
-      }
+table.paleBlueRows {
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid #FFFFFF;
+    width: 350px;
+    height: 200px;
+    text-align: center;
+    border-collapse: collapse;
+  }
+  table.paleBlueRows td, table.paleBlueRows th {
+    border: 1px solid #FFFFFF;
+    padding: 3px 2px;
+  }
+  table.paleBlueRows tbody td {
+    font-size: 13px;
+  }
+  table.paleBlueRows tr:nth-child(even) {
+    background: #D0E4F5;
+  }
+  table.paleBlueRows thead {
+    background: #0B6FA4;
+    border-bottom: 5px solid #FFFFFF;
+  }
+  table.paleBlueRows thead th {
+    font-size: 19px;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-align: center;
+    border-left: 2px solid #FFFFFF;
+  }
+  table.paleBlueRows thead th:first-child {
+    border-left: none;
+  }
+  
+  table.paleBlueRows tfoot td {
+    font-size: 14px;
+  }
